# AccessGuy

./: .editorconfig  .gitignore  LICENSE  NewLife-AccessGuy.ps1  README.md  README.pl.md
contracts/: dataset.schema.json  rules.en.yaml  rules.yaml
contracts/samples/: dataset.sample.json
docs/: ARCHITECTURE.md  PERMISSIONS.md
processor/: README.md  pyproject.toml
processor/src/accessguy_processor/: __init__.py  __main__.py  branding.py  cli.py  ingest.py  models.py  rules.py
processor/src/accessguy_processor/i18n/: __init__.py
processor/src/accessguy_processor/i18n/catalogs/: en.json  pl.json
processor/src/accessguy_processor/report/: __init__.py  community.py  console.py  exports.py  html.py  theatrics.py
processor/src/accessguy_processor/report/templates/: _apps_body.html.j2  _ca_body.html.j2  _filterbar.html.j2  _groups_body.html.j2  _sevbar.html.j2  _summary_body.html.j2  _summary_grade.html.j2  _summary_rest.html.j2  _users_body.html.j2  apps.html.j2  groups.html.j2  index.html.j2  report.html.j2  summary.html.j2
processor/src/accessguy_processor/report/templates/assets/: style.css
processor/src/accessguy_processor/scoring/: __init__.py  correlation.py  engine.py  predicates.py  predicates_app.py  predicates_group.py
processor/tests/: conftest.py  test_action_plan.py  test_correlation.py  test_i18n.py  test_ingest.py  test_new_rules.py  test_rules_13.py  test_scoring.py  test_scoring_modules.py
scanner/: Invoke-AccessGuyScan.ps1
scanner/lib/: Auth.ps1  Collectors.ps1  Common.ps1  Dataset.ps1  Protect.ps1  ReportLite.ps1  Strings.ps1
(+1 files in other folders)
